version/0.30/_sources/api/solver/_autosummary/settings/drag_child.rst.txt
:orphan:

.. _drag_child:

drag_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.drag_child
    :show-inheritance:

.. rubric:: Attributes

================================================================   ==============================================================================

Attribute                                                                                                                                 Summary

================================================================   ==============================================================================
:ref:`name <name_2>`                                                                                                          Name of the object.

:ref:`report_type <report_type>`                                       The report type; the list may vary on the selected report definition type.

:ref:`force_vector <force_vector>`                                                                                          'force_vector' child.

:ref:`reference_frame <reference_frame_6>`                                                                               'reference_frame' child.

:ref:`zones <zones_2>`                                                                                                             'zones' child.

:ref:`per_zone <per_zone>`                                                                                                      'per_zone' child.

:ref:`average_over <average_over>`                                                                                          'average_over' child.

:ref:`retain_instantaneous_values <retain_instantaneous_values>`                                             'retain_instantaneous_values' child.

:ref:`report_output_type <report_output_type>`                                                                        'report_output_type' child.

:ref:`physics <physics_1>`                                                                                                       'physics' child.

:ref:`geometry <geometry_7>`                                                                                                    'geometry' child.

:ref:`output_parameter <output_parameter_1>`                                   Option to make report definition available as an output parameter.

================================================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

==================   ===============================

Parent                                       Summary

==================   ===============================
:ref:`drag <drag>`       The report definition type.

==================   ===============================

